fix: alignment adjustments

--- a/assets/source/sass/nav.scss
+++ b/assets/source/sass/nav.scss
@@ -7,18 +7,23 @@
     justify-content: space-between;
     margin-top: calc(#{variables.$base} * 2);
     margin-bottom: calc(#{variables.$base} * 2);
-    align-items: center;
+    align-items: start;
     flex-direction: column;
     gap: calc(#{variables.$base} * 2);
 
     @include mq.mq('md') {
         margin-top: calc(#{variables.$base} * 4);
         margin-bottom: calc(#{variables.$base} * 4);
+        align-items: start;
     } 
 
     @include mq.mq('sm') {
         flex-direction: row;
         gap: 0;
+    }
+
+    .c-breadcrumb {
+        align-self: center;
     }
 }
 
